# Shared-reprensentation

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  README.md  index.html  package.json  vite.config.ts
backend/: Cargo.toml
backend/src/: conversations.rs  main.rs  suggestions.rs  tool_dispatch.rs  web_server.rs
backend/src/chat/: args.rs  binary.rs  bridge.rs  continuation.rs  execute.rs  mod.rs  resume.rs  session.rs  websocket.rs
backend/src/diagram/: block_refresh.rs  connection_detail.rs  function_detail.rs  handler.rs  mod.rs  prompts.rs  tools.rs
docs/: README.md  diagram.md
src/: App.tsx  main.tsx  styles.css
src/core/: README.md  apiAdapter.ts  chatActivity.tsx  chatContext.ts  chatContextDrag.tsx  diagram.tsx  project.tsx
src/core/components/: AppShell.tsx  ChatContextChip.tsx  ChatView.tsx  Markdown.tsx  PromptInput.tsx  ThinkingBubble.tsx
src/core/hooks/: useClaudeSession.ts
src/core/tools/builtins/: EditProjectFile.tsx  ReadProjectFile.tsx  ReadProjectFileResultCard.tsx  WriteProjectFile.tsx  WriteProjectFileResultCard.tsx
src/features/diagram/: README.md  index.ts  types.ts
src/features/diagram/api/: buildChatContext.ts  buildProjectContext.ts  fetchBlockRefresh.ts  fetchCapabilityScan.ts  fetchColorScheme.ts  fetchConnectionDetail.ts  fetchFocus.ts  fetchFunctionDetail.ts  fetchStructure.ts
src/features/diagram/color/: scheme.ts  useColorScheme.ts
src/features/diagram/components/: DiagramCanvas.tsx  DiagramViewSwitcher.tsx
src/features/diagram/hooks/: useAdaptiveFocus.ts  useBlockCapabilityRefresh.ts  useBubbleFocus.ts  (+14 more)
(+50 files in other folders)
