[package]
name = "claude-ui-app"
version = "0.1.0"
description = "Template web server for building bespoke Claude Code UIs"
authors = ["template"]
license = "AGPL-3.0"
edition = "2021"

# Two binaries: the main Axum server, plus a tiny MCP bridge it spawns
# alongside Claude to expose registered tools.
[[bin]]
name = "claude-ui-app"
path = "src/main.rs"

[[bin]]
name = "tool-bridge"
path = "src/bin/tool_bridge.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
log = "0.4"
env_logger = "0.11"
reqwest = { version = "0.12", features = ["json", "native-tls-vendored", "stream"] }
futures = "0.3"
futures-util = "0.3"
tempfile = "3"
which = "7"
sha2 = "0.10"
hmac = "0.12"
subtle = "2"          # constant-time comparison for the cookie HMAC check
uuid = { version = "1.6", features = ["v4", "serde"] }
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors"] }
clap = { version = "4.0", features = ["derive"] }
async-stream = "0.3.6"
dotenvy = "0.15"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
